force-app/main/default/objects/Wire__c/Wire__c.object-meta.xml
<CustomObject>
    <label>Wire</label>
    <nameField>
        <displayFormat>W-{000000000}</displayFormat>
        <label>Wire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>