force-app/main/default/objects/Wire__c/fields/AdvanceWireDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceWireDate__c</fullName>
    <description>This pulls data from the &quot;Wire Date&quot; field located on the Advance object.</description>
    <formula>Advance__r.Wire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the wire date that is entered on the advance.</inlineHelpText>
    <label>Advance Wire Date</label>
    <type>Date</type>
</CustomField>