force-app/main/default/objects/Wire__c/fields/BlackSquare_Fee__c.field-meta.xml
<CustomField>
    <fullName>BlackSquare_Fee__c</fullName>
    <label>BlackSquare Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>