force-app/main/default/objects/Wire__c/fields/BlackSquare_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>BlackSquare_Fee_Adjustment__c</fullName>
    <label>BlackSquare Fee Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>