force-app/main/default/objects/Wire__c/fields/Daily_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate__c</fullName>
    <label>Daily Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>