force-app/main/default/objects/Wire__c/fields/Daily_Interest_Rate_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate_Adjustment__c</fullName>
    <label>Daily Interest Rate Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>