force-app/main/default/objects/Wire__c/fields/Doc_Prep_Fee__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_Fee__c</fullName>
    <label>Doc Prep Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>