force-app/main/default/objects/Wire__c/fields/Doc_Prep_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_Fee_Adjustment__c</fullName>
    <label>Doc Prep Fee Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>