force-app/main/default/objects/Wire__c/fields/Inspection_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Fee_Adjustment__c</fullName>
    <label>Inspection Fee Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>