force-app/main/default/objects/Wire__c/fields/Net_Funding__c.field-meta.xml
<CustomField>
    <fullName>Net_Funding__c</fullName>
    <formula>Approved_Advance_Amount__c - (Origination_Fee__c + Advance_Fee__c +  BPO_Appraisal_Fee__c +  Doc_Prep_Fee__c + Advance_Fee_Adjustment__c + BPO_Appraisal_Fee_Adjustment__c + Doc_Prep_Fee_Adjustment__c + BlackSquare_Fee__c + BlackSquare_Fee_Adjustment__c + Daily_Interest_Rate__c + Daily_Interest_Rate_Adjustment__c + Inspection_Fee__c + Inspection_Fee_Adjustment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>