force-app/main/default/objects/Wire__c/fields/Wire_Date__c.field-meta.xml
<CustomField>
    <fullName>Wire_Date__c</fullName>
    <description>Retire this field.</description>
    <label>Wire Date - Retire</label>
    <type>Date</type>
</CustomField>