force-app/main/default/objects/Wire__c/fields/Wire_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wire_Fee__c</fullName>
    <label>Wire Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>