force-app/main/default/objects/Wire__c/fields/Wire_Number__c.field-meta.xml
<CustomField>
    <fullName>Wire_Number__c</fullName>
    <label>Wire #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>